@@ -6,6 +6,7 @@
 * Tweak - Updated jQuery Validation JS library to v1.19.2.
 * Tweak - Add trigger `everest_forms_loaded` to notify plugins that the core was loaded.
 * Tweak - Modify duplicated action hook `everest_forms_general_settings` to `everest_forms_inline_general_settings` for builder general settings.
+* Dev - Introduced `everest_forms_{$export_type}_export_delimiter` filter to change separator string while exporting CSV files.
 
 = 1.6.7 - 17-05-2020 =
 * Feature - Added a new Pro field Range Slider.
